; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_posix_sem.c_psem_delete.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_posix_sem.c_psem_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pseminfo = type { i32 }

@kernel_task = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@EINTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pseminfo*)* @psem_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @psem_delete(%struct.pseminfo* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pseminfo*, align 8
  %4 = alloca i32, align 4
  store %struct.pseminfo* %0, %struct.pseminfo** %3, align 8
  %5 = load i32, i32* @kernel_task, align 4
  %6 = load %struct.pseminfo*, %struct.pseminfo** %3, align 8
  %7 = getelementptr inbounds %struct.pseminfo, %struct.pseminfo* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @semaphore_destroy(i32 %5, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  switch i32 %10, label %16 [
    i32 131, label %11
    i32 129, label %11
    i32 132, label %13
    i32 130, label %13
    i32 128, label %15
  ]

11:                                               ; preds = %1, %1
  %12 = load i32, i32* @EINVAL, align 4
  store i32 %12, i32* %2, align 4
  br label %18

13:                                               ; preds = %1, %1
  %14 = load i32, i32* @EINTR, align 4
  store i32 %14, i32* %2, align 4
  br label %18

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

16:                                               ; preds = %1
  %17 = load i32, i32* @EINVAL, align 4
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %16, %15, %13, %11
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @semaphore_destroy(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
